--- a/css/main.css
+++ b/css/main.css
@@ -75,10 +75,25 @@ link:visited {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .logo--position {
@@ -132,6 +147,24 @@ link:visited {
 .btn:hover {
   -webkit-transform: scaleX(1.02);
           transform: scaleX(1.02);
+}
+@media screen and (min-width: 480px) {
+  .btn {
+    min-width: 200px;
+    padding: 10px 24px 10px 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .btn {
+    min-width: 200px;
+    padding: 10px 24px 10px 24px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .btn {
+    min-width: 216px;
+    padding: 10px 32px 10px 32px;
+  }
 }
 
 .soc {
@@ -214,6 +247,24 @@ link:visited {
   padding-bottom: 25px;
   border-bottom: 1px solid #ececec;
 }
+@media screen and (min-width: 480px) {
+  .header {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header {
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header {
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
+}
 
 .navigation {
   display: -webkit-box;
@@ -222,6 +273,7 @@ link:visited {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  display: none;
 }
 
 .navigation__list {
@@ -274,6 +326,10 @@ link:visited {
   transition: opacity 250ms var(--animation), background-color 250ms var(--animation), -webkit-transform 250ms var(--animation);
   transition: transform 250ms var(--animation), opacity 250ms var(--animation), background-color 250ms var(--animation);
   transition: transform 250ms var(--animation), opacity 250ms var(--animation), background-color 250ms var(--animation), -webkit-transform 250ms var(--animation);
+}
+
+.connection {
+  display: none;
 }
 
 .connection--position {
@@ -343,12 +399,42 @@ link:visited {
 
 .hero {
   background-color: #2F303A;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../img/hero-background.jpg);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero-background.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../img/hero-bg-mob-1x.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero-bg-mob-1x.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   text-align: center;
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../img/hero-bg-mob-2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero-bg-mob-2x.jpg);
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../img/hero-bg-tab-1x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero-bg-tab-1x.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../img/hero-bg-tab-2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero-bg-tab-2x.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../img/hero-background.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero-background.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../img/hero-background-2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero-background-2x.jpg);
+  }
 }
 
 .hero--position {
@@ -364,35 +450,87 @@ link:visited {
   margin-right: auto;
   max-width: 696px;
   font-weight: 900;
-  font-size: 44px;
+  font-size: 26px;
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #FFFFFF;
 }
+@media screen and (min-width: 480px) {
+  .hero__title {
+    font-size: 26px;
+    line-height: 1.6;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero__title {
+    max-width: 360px;
+    font-size: 26px;
+    line-height: 1.6;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    max-width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
 
 .hero__btn--position {
   margin: 30px auto 0px;
 }
 
-.principles,
-.tasks {
-  padding-top: 94px;
+.principles {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 480px) {
+  .principles {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .principles {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .principles {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .principles__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
 }
 
 .principles__item {
-  max-width: 270px;
-  margin-right: 30px;
+  width: 100%;
 }
-.principles__item:last-child {
-  margin-right: 0px;
+@media screen and (min-width: 480px) {
+  .principles__item {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .principles__item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .principles__item {
+    width: calc((100% - 90px) / 4);
+  }
 }
 
 .principles__box {
@@ -418,6 +556,21 @@ link:visited {
   text-transform: uppercase;
   margin-bottom: 10px;
 }
+@media screen and (min-width: 480px) {
+  .principles__title {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .principles__title {
+    text-align: left;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .principles__title {
+    text-align: left;
+  }
+}
 
 .principles__after-title {
   font-size: 14px;
@@ -431,30 +584,96 @@ link:visited {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+@media screen and (min-width: 480px) {
+  .team {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
 
 .team__title--position {
   margin-bottom: 50px;
 }
+@media screen and (min-width: 480px) {
+  .team__title--position {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team__title--position {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__title--position {
+    margin-bottom: 50px;
+  }
+}
 
 .team__title {
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
+}
+@media screen and (min-width: 480px) {
+  .team__title {
+    font-size: 28px;
+    line-height: 1.18;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team__title {
+    font-size: 28px;
+    line-height: 1.18;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__title {
+    font-size: 36px;
+    line-height: 1.17;
+  }
 }
 
 .team__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
 }
 
 .team__item--position {
-  margin-right: 30px;
+  width: 100%;
 }
-.team__item--position:last-child {
-  margin-right: 0px;
+@media screen and (min-width: 480px) {
+  .team__item--position {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team__item--position {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__item--position {
+    width: calc((100% - 90px) / 4);
+  }
 }
 
 .team__box {
@@ -463,6 +682,21 @@ link:visited {
   padding-bottom: 30px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+@media screen and (min-width: 480px) {
+  .team__box {
+    padding-bottom: 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team__box {
+    padding-bottom: 24px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__box {
+    padding-bottom: 30px;
+  }
 }
 
 .team__name {
@@ -484,7 +718,13 @@ link:visited {
 }
 
 .tasks {
-  padding-bottom: 94px;
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .tasks {
+    display: block;
+    padding-bottom: 94px;
+  }
 }
 
 .tasks__title {
@@ -498,18 +738,48 @@ link:visited {
 .tasks__title--position {
   margin-bottom: 50px;
 }
+@media screen and (min-width: 480px) {
+  .tasks__title--position {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .tasks__title--position {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .tasks__title--position {
+    margin-bottom: 50px;
+  }
+}
 
 .tasks__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
 }
 
 .tasks__item--position {
-  margin-right: 30px;
+  width: 100%;
 }
-.tasks__item--position:last-child {
-  margin-right: 0px;
+@media screen and (min-width: 480px) {
+  .tasks__item--position {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .tasks__item--position {
+    width: calc((100% - 60px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .tasks__item--position {
+    width: calc((100% - 60px) / 3);
+  }
 }
 
 .tasks__wrap {
@@ -537,6 +807,24 @@ link:visited {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+@media screen and (min-width: 480px) {
+  .permanent-clients {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .permanent-clients {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .permanent-clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
 
 .permanent-clients__title {
   font-size: 36px;
@@ -545,11 +833,34 @@ link:visited {
   letter-spacing: 0.03em;
   margin-bottom: 50px;
 }
+@media screen and (min-width: 480px) {
+  .permanent-clients__title {
+    margin-bottom: 30px;
+    font-size: 28px;
+    line-height: 1.18;
+  }
+}
+@media screen and (min-width: 768px) {
+  .permanent-clients__title {
+    margin-bottom: 30px;
+    font-size: 28px;
+    line-height: 1.18;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .permanent-clients__title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.17;
+  }
+}
 
 .permanent-clients__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -691,16 +1002,61 @@ link:visited {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+}
+@media screen and (min-width: 480px) {
+  .filter-list {
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+  }
+}
+@media screen and (min-width: 768px) {
+  .filter-list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .filter-list {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .filter-list-btn {
   margin-right: 8px;
+  margin-bottom: 15px;
 }
 .filter-list-btn:last-child {
   margin-right: 0px;
+}
+@media screen and (min-width: 480px) {
+  .filter-list-btn {
+    margin-bottom: 15px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .filter-list-btn {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 0px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .filter-list-btn {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-bottom: 0px;
+  }
 }
 
 .project-title {
@@ -729,17 +1085,32 @@ link:visited {
 }
 
 .projects-list-item {
-  width: 370px;
-  height: 404px;
+  height: auto;
   border: 1px solid #eeeeee;
   -webkit-transition: -webkit-box-shadow 250ms var(--cubic);
   transition: -webkit-box-shadow 250ms var(--cubic);
   transition: box-shadow 250ms var(--cubic);
   transition: box-shadow 250ms var(--cubic), -webkit-box-shadow 250ms var(--cubic);
+  width: 100%;
 }
 .projects-list-item:hover, .projects-list-item:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+@media screen and (min-width: 480px) {
+  .projects-list-item {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .projects-list-item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .projects-list-item {
+    width: calc((100% - 60px) / 3);
+  }
 }
 
 .project-info-wrap {
