--- a/sass/layouts/_permanent-clients.scss
+++ b/sass/layouts/_permanent-clients.scss
@@ -1,6 +1,21 @@
 .permanent-clients {
     padding-top: 94px;
     padding-bottom: 94px;
+
+    @include mobile {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+
+    @include tablet {
+        padding-top: 60px;
+        padding-bottom: 60px;
+        }
+
+    @include desktop {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
 
 .permanent-clients__title {
@@ -9,10 +24,29 @@
     text-align: center;
     letter-spacing: 0.03em;
     margin-bottom: 50px;
+
+    @include mobile {
+        margin-bottom: 30px;
+        font-size: 28px;
+        line-height: 1.18;
+    }
+    
+    @include tablet {
+        margin-bottom: 30px;
+        font-size: 28px;
+        line-height: 1.18;
+    }
+    
+    @include desktop {
+        margin-bottom: 50px;
+        font-size: 36px;
+        line-height: 1.17;
+    }
 }
 
 .permanent-clients__list {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 30px;
 }
