--- a/sass/layouts/_principles.scss
+++ b/sass/layouts/_principles.scss
@@ -1,18 +1,42 @@
-.principles,
-.tasks {
-    padding-top: 94px;
+.principles {
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @include mobile {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+
+    @include tablet {
+        padding-top: 60px;
+        padding-bottom: 60px;
+        }
+
+    @include desktop {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
 
 .principles__list {
     display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
 }
 
 .principles__item {
-    max-width: 270px;
-    margin-right: 30px;
+    width: 100%;
 
-    &:last-child {
-        margin-right: 0px;
+    @include mobile {
+        width: 100%;
+    }
+
+    @include tablet {
+        width: calc((100% - 30px) / 2);
+    }
+
+    @include desktop {
+        width: calc((100% - 90px) / 4);
     }
 }
 
@@ -32,6 +56,18 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     margin-bottom: 10px;
+    
+    @include mobile {
+        text-align: center;
+    }
+
+    @include tablet {
+        text-align: left;
+    }
+
+    @include desktop {
+        text-align: left;
+    }
 }
 
 .principles__after-title {
