--- a/sass/layouts/_projects.scss
+++ b/sass/layouts/_projects.scss
@@ -21,8 +21,7 @@
 }
 
 .projects-list-item {
-    width: 370px;
-    height: 404px;
+    height: auto;
     border: 1px solid #eeeeee;
     transition: box-shadow 250ms var(--cubic);
 
@@ -30,6 +29,20 @@
     &:focus {
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 
+    }
+
+    width: 100%;
+
+    @include mobile {
+        width: 100%;
+    }
+
+    @include tablet {
+        width: calc((100% - 30px) / 2);
+    }
+
+    @include desktop {
+        width: calc((100% - 60px) / 3);
     }
 }
 
