--- a/sass/layouts/_tasks.scss
+++ b/sass/layouts/_tasks.scss
@@ -1,5 +1,10 @@
 .tasks {
-    padding-bottom: 94px;
+    display: none;
+
+    @include desktop {
+        display: block;
+        padding-bottom: 94px;
+    }
 }
 
 .tasks__title {
@@ -12,17 +17,39 @@
 
 .tasks__title--position {
     margin-bottom: 50px;
+    
+    @include mobile {
+        margin-bottom: 30px;
+    }
+    
+    @include tablet {
+        margin-bottom: 30px;
+    }
+    
+    @include desktop {
+        margin-bottom: 50px;
+    }
 }
 
 .tasks__list {
     display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
 }
 
 .tasks__item--position {
-    margin-right: 30px;
+    width: 100%;
 
-    &:last-child {
-        margin-right: 0px;
+    @include mobile {
+        width: 100%;
+    }
+
+    @include tablet {
+        width: calc((100% - 60px) / 3);
+    }
+
+    @include desktop {
+        width: calc((100% - 60px) / 3);
     }
 }
 
