--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,6 +23,8 @@
 @import './layouts/footer-subscribing';
 @import './layouts/mob-menu';
 
+@import './components/soc-footer';
+
 
 @import './layouts/modal';
 
