--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -26,8 +26,9 @@ img {
 .permanent-clients__list,
 .address__list,
 .filter-list,
-.projects-list
- {
+.projects-list,
+.mob-menu__list
+{
     list-style: none;
 }
 
