--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,25 +1,39 @@
-.logo--position {
-    margin-right: 93px;
-}
-
-.logo__web-element {
-    color: var(--accent-color);
-}
-
-.logo__studio-element {
+.logo {
+    font-family: "Raleway";
+    @include font(700, 24px, 1.17);
+    text-align: center;
     color: #000000;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    margin-right: auto;
+
+    @media screen and (min-width: 768px) {
+        padding-top: 26px;
+        padding-bottom: 26px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        padding-top: 24px;
+        padding-bottom: 25px;
+        font-size: 26px;
+        line-height: 1.19;
+    }
 }
 
-.logo__web-element,
-.logo__studio-element {
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
+.header__logo {
+    @media screen and (min-width: 768px) {
+        margin-right: 88px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin-right: 93px;
+    }
 }
 
-.logo__studio-element--footer-color {
-    color: #FFFFFF;
+.logo__span--color-blue {
+    color: var(--btn-color);
+}
+
+.logo__text--color-white {
+    color: #fff;
 }
