--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,55 +1,159 @@
 .footer {
-    background: #2F303A;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    width: 100%;
+    min-height: 252px;
+    background-color: #2f303a;
+
+    @media screen and (min-width: 1200px) {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
 }
 
-.footer--flex {
-    display: flex;
-    align-items: baseline;
+.footer__flex {
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        flex-wrap: nowrap;
+    }
 }
 
-.address--position {
+.footer__address {
+    text-align: center;
+
+    @media screen and (min-width: 768px) {
+        margin-left: 76px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 100%;
+        margin-left: 0;
+        text-align: start;
+    }
+}
+
+.address__text {
+    @include font(400, 14px, 1.71);
     margin-top: 20px;
-}
-
-.address__item--position {
-    margin-bottom: 9px;
-}
-
-.map__link {
     font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
-.mail__link,
-.tel__link {
+.footer-comm__item {
+    margin-top: 8px;
+}
+
+.footer-comm__link {
+    @include font(400, 14px, 1.71);
     font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+    transition: color 250ms var(--cubic);
+
+    &:hover,
+    &:focus {
+        color: #2196f3;
+    }
 }
 
-.join-us {
-    max-width: 206px;
+.footer__join {
+    @include flex;
+    flex-direction: column;
+    margin-top: 60px;
+
+    @media screen and (min-width: 768px) {
+        display: block;
+        margin-top: 0;
+        margin-right: 86px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin: 12px 93px 0 70px;
+    }
 }
 
-.join-us--position{
-    margin-left: 70px;
+.join__list {
+    display: flex;
+    gap: 10px;
 }
 
-.join-us__title {
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #FFFFFF;
-    margin-bottom: 20px;
+.join__item {
+    @include flex;
 }
 
+.footer__sub {
+    margin-top: 60px;
+    margin-left: auto;
+    margin-right: auto;
+
+    @media screen and (min-width: 1200px) {
+        margin-top: 12px;
+    }
+}
+
+.sub__flex {
+    @include flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: unset;
+    }
+}
+
+.sub__input {
+    padding-left: 16px;
+    width: 100%;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    outline: none;
+    background-color: transparent;
+    color: #fff;
+    transition: border-color 250ms var(--cubic);
+
+    &:focus {
+        border-color: var(--btn-color);
+    }
+
+    &::placeholder {
+        font-size: 16px;
+        line-height: 1.25;
+        display: flex;
+        align-items: center;
+        letter-spacing: 0.03em;
+        color: rgba(255, 255, 255, 0.6);
+    }
+
+    @media screen and (min-width: 768px) {
+        width: 450px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 358px;
+    }
+}
+
+.sub__btn {
+    @include flex;
+    min-width: 200px;
+    margin-top: 20px;
+    text-align: center;
+    padding: 10px 28px;
+
+    @media screen and (min-width: 1200px) {
+        margin-top: 0;
+        margin-left: 12px;
+    }
+}
+
+.sub__icon {
+    margin-left: 10px;
+    fill: #fff;
+}
