--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,69 +1,55 @@
-.header__wrap {
-    display: flex;
-    align-items: center;
-}
-
 .header {
-    background: #FFFFFF;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    width: 100%;
     border-bottom: 1px solid #ececec;
 
-    @include mobile {
-            padding-top: 16px;
-            padding-bottom: 16px;
-        }
-    
-    @include tablet {
-            padding-top: 26px;
-            padding-bottom: 26px;
+    @media screen and (min-width: 1200px) {
+        min-width: 1200px;
+        margin-right: auto;
+        margin-left: auto;
     }
-    
-    @include desktop {
-            padding-top: 24px;
-            padding-bottom: 25px;
-    }
+}
+
+.header__nav {
+    display: flex;
+    position: relative;
 }
 
 .navigation {
-
-    display: flex;
-    align-items: center;
     display: none;
-}
 
-.navigation__list {
-    display: flex;
+    @media screen and (min-width: 768px) {
+        display: flex;
+        align-items: center;
+        margin-right: 96px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin-right: 0;
+    }
 }
 
 .navigation__item {
     margin-right: 50px;
 
     &:last-child {
-        margin-right: 0px;
+        margin-right: 0;
     }
 }
 
 .navigation__link {
+    @include font(500, 14px, 1.14, 0.02);
     position: relative;
     padding-top: 32px;
     padding-bottom: 32px;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: var(--cubic);
+    color: var(--second-color);
+    transition: color 250ms var(--cubic);
 
-    &:hover, 
+    &:hover,
     &:focus {
-            color: var(--accent-color);
-        }
+        color: #2196f3;
+    }
 
-    &.current::after {
+    &::after {
         position: absolute;
         content: "";
         display: block;
@@ -72,72 +58,127 @@
         left: 0;
         bottom: 0;
         border-radius: 2px;
-        background-color: var(--accent-color);
+        transform: scaleX(0);
+        opacity: 0;
+        transition: transform 250ms var(--cubic), opacity 250ms var(--cubic),
+            background-color 250ms var(--cubic);
+    }
+
+    &:hover::after {
+        background-color: var(--btn-color);
         transform: scaleX(1);
         opacity: 1;
-        transition: transform 250ms var(--animation), opacity 250ms var(--animation),
-            background-color 250ms var(--animation);
+        transition: transform 250ms var(--cubic), opacity 250ms var(--cubic),
+            background-color 250ms var(--cubic);
     }
-    
 }
 
-.connection {
+.communication {
     display: none;
+
+    @media screen and (min-width: 768px) {
+        display: block;
+        padding-top: 21px;
+        padding-bottom: 21px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        margin-left: auto;
+        padding-top: 32px;
+        padding-bottom: 32px;
+    }
 }
 
-.connection--position {
-    margin-left: auto;
+.communication__item {
+    @media screen and (min-width: 768px) {
+        margin-bottom: 12px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin-right: 30px;
+        margin-bottom: 0;
+
+        &:last-child {
+            margin-right: 0;
+        }
+    }
 }
 
-.connection__list {
+.communication__link {
     display: flex;
     align-items: center;
-    margin-left: auto;
-}
-
-.connection__item {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--text-color);
-
-    &:first-child {
-        margin-right: 50px;
-    }
-}
-
-.connection__mail-icon {
-    display: flex;
-    margin-right: 10px;
-    fill: #757575;
-
-    .connection__link:hover &,
-    .connection__link:focus & {
-        fill: var(--accent-color);
-    }
-}
-
-.connection__tel-icon {
-    display: flex;
-    margin-right: 10px;
-    fill: #757575;
-
-    .connection__link:hover &,
-    .connection__link:focus & {
-        fill: var(--accent-color)
-    }
-}
-
-.connection__link {
-    display: flex;
-    align-items: center;
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: var(--cubic);
+    @include font(500, 12px, 1.16, 0.02em);
+    color: var(--accent-color);
+    transition: color 250ms var(--cubic);
 
     &:hover,
     &:focus {
-    color: var(--accent-color);
+        color: #2196f3;
     }
+
+    @media screen and (min-width: 1200px) {
+        @include font(500, 14px, 1.14, 0.02em);
+    }
+}
+
+.communication__icon {
+    display: flex;
+    margin-right: 8px;
+    fill: var(--text-color);
+}
+
+.communication__icon-mail {
+    @media screen and (min-width: 768px) {
+        width: 14px;
+        height: 10px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 16px;
+        height: 12px;
+    }
+}
+
+.communication__icon-tel {
+    @media screen and (min-width: 768px) {
+        width: 10px;
+        height: 14px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 12px;
+        height: 16px;
+    }
+}
+
+.header-icon {
+    fill: currentColor;
+}
+
+.underline {
+    display: inline-block;
+
+    &::after {
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 4px;
+        left: 0;
+        bottom: -1px;
+        border-radius: 2px;
+        background-color: var(--btn-color);
+
+        @media screen and (min-width: 1200px) {
+            bottom: 0;
+        }
+    }
+}
+
+.accent {
+    color: var(--btn-color);
 }
