--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -26,9 +26,8 @@ img {
 .permanent-clients__list,
 .address__list,
 .filter-list,
-.projects-list,
-.mob-menu__list
-{
+.projects-list
+ {
     list-style: none;
 }
 
