--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,159 +1,134 @@
 .footer {
-    width: 100%;
-    min-height: 252px;
-    background-color: #2f303a;
-
-    @media screen and (min-width: 1200px) {
-        padding-top: 60px;
-        padding-bottom: 60px;
-    }
+    background: #2F303A;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
-.footer__flex {
-    @media screen and (min-width: 768px) {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-
-    @media screen and (min-width: 1200px) {
-        display: flex;
-        flex-wrap: nowrap;
-    }
-}
-
-.footer__address {
-    text-align: center;
-
-    @media screen and (min-width: 768px) {
-        margin-left: 76px;
-    }
-
-    @media screen and (min-width: 1200px) {
-        width: 100%;
-        margin-left: 0;
-        text-align: start;
-    }
-}
-
-.address__text {
-    @include font(400, 14px, 1.71);
-    margin-top: 20px;
-    font-style: normal;
-    color: #ffffff;
-}
-
-.footer-comm__item {
-    margin-top: 8px;
-}
-
-.footer-comm__link {
-    @include font(400, 14px, 1.71);
-    font-style: normal;
-    color: rgba(255, 255, 255, 0.6);
-    transition: color 250ms var(--cubic);
-
-    &:hover,
-    &:focus {
-        color: #2196f3;
-    }
-}
-
-.footer__join {
-    @include flex;
-    flex-direction: column;
-    margin-top: 60px;
-
-    @media screen and (min-width: 768px) {
-        display: block;
-        margin-top: 0;
-        margin-right: 86px;
-    }
-
-    @media screen and (min-width: 1200px) {
-        margin: 12px 93px 0 70px;
-    }
-}
-
-.join__list {
+.footer--flex {
     display: flex;
-    gap: 10px;
-}
-
-.join__item {
-    @include flex;
-}
-
-.footer__sub {
-    margin-top: 60px;
-    margin-left: auto;
-    margin-right: auto;
-
-    @media screen and (min-width: 1200px) {
-        margin-top: 12px;
-    }
-}
-
-.sub__flex {
-    @include flex;
-    flex-wrap: wrap;
     flex-direction: column;
+    justify-content: center;
 
-    @media screen and (min-width: 1200px) {
-        display: flex;
-        flex-wrap: nowrap;
-        flex-direction: unset;
+    @include mobile {
+        display: block;
     }
+
+    @include tablet {
+        }
+
+    @include desktop {
+        display: flex;
+        flex-direction: row;
+        align-items: baseline;
+    }
+
 }
 
-.sub__input {
-    padding-left: 16px;
-    width: 100%;
-    height: 50px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    outline: none;
-    background-color: transparent;
-    color: #fff;
-    transition: border-color 250ms var(--cubic);
-
-    &:focus {
-        border-color: var(--btn-color);
-    }
-
-    &::placeholder {
-        font-size: 16px;
-        line-height: 1.25;
-        display: flex;
-        align-items: center;
-        letter-spacing: 0.03em;
-        color: rgba(255, 255, 255, 0.6);
-    }
-
-    @media screen and (min-width: 768px) {
-        width: 450px;
-    }
-
-    @media screen and (min-width: 1200px) {
-        width: 358px;
-    }
-}
-
-.sub__btn {
-    @include flex;
-    min-width: 200px;
-    margin-top: 20px;
+.footer__contact-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
-    padding: 10px 28px;
+    margin-bottom: 60px;
 
-    @media screen and (min-width: 1200px) {
-        margin-top: 0;
-        margin-left: 12px;
+    @include mobile {
+        display: block;
+    }
+
+    @include tablet {
+        margin-bottom: 0;
+
+        }
+
+    @include desktop {
+        text-align: left;
     }
 }
 
-.sub__icon {
-    margin-left: 10px;
-    fill: #fff;
+.address--position {
+    margin-top: 20px;
+}
+
+.address__item--position {
+    margin-bottom: 8px;
+
+    @include desktop {
+        margin-bottom: 9px;
+    }
+
+}
+
+.map__link {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+}
+
+.mail__link,
+.tel__link {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.join-us {
+    max-width: 206px;
+}
+
+.join-us--position{
+    margin-bottom: 60px;
+
+    @include mobile {
+            margin: 0 auto 60px;
+        }
+    
+        @include tablet {
+            margin: 0;
+        }
+    
+        @include desktop {
+        margin-left: 70px;
+        }
+}
+
+.join-us__title {
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-bottom: 20px;
+    text-align: center;
+
+    @include desktop {
+        text-align: left;
+    }
+}
+
+.footer--tab {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+
+        
+    @include tablet {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        
+        align-items: baseline;
+        margin-bottom: 60px;
+    }
+    
+    @include desktop {
+        align-items: baseline;
+    }
 }
