--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,10 @@ img {
 .permanent-clients__list,
 .address__list,
 .filter-list,
-.projects-list {
+.projects-list,
+.mob-menu__list,
+.mob-connection__list,
+.mob-soc__list {
   list-style: none;
 }
 
@@ -169,17 +172,6 @@ link:visited {
   .btn {
     min-width: 216px;
     padding: 10px 32px 10px 32px;
-  }
-}
-
-.btn__menu {
-  border: none;
-  background-color: rgba(0, 0, 0, 0);
-  padding: 0;
-}
-@media screen and (min-width: 768px) {
-  .btn__menu {
-    display: none;
   }
 }
 
@@ -1758,4 +1750,142 @@ link:visited {
 .submit-btn:hover {
   -webkit-transform: scaleX(1.02);
           transform: scaleX(1.02);
+}
+
+.menu-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: auto;
+  top: 10px;
+  right: 15px;
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
+}
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+
+.mobile-menu {
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #fff;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.menu-button-close {
+  display: block;
+  margin-left: auto;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
+}
+
+.menu-nav {
+  margin-bottom: auto;
+}
+
+.mobile-nav {
+  display: block;
+}
+.mobile-nav .item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.mobile-nav .link {
+  color: var(--title-text-color);
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mobile-nav .link:hover, .mobile-nav .link:focus {
+  color: var(--accent-color);
+  display: block;
+}
+.mobile-nav .current {
+  color: var(--accent-color);
+}
+
+.mobile-contacts {
+  margin-bottom: 64px;
+}
+.mobile-contacts .phone {
+  display: block;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+  text-decoration: none;
+  margin-bottom: 32px;
+}
+.mobile-contacts .mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #757575;
+  text-decoration: none;
+}
+
+.mobile-sm {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 0;
+}
+
+.mobile-sm-item:not(:first-child) {
+  padding-left: 10px;
+}
+
+.mobile-sm-item:not(:last-child) {
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mobile-sm-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+  text-decoration: none;
 }/*# sourceMappingURL=main.css.map */
