--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -26,7 +26,10 @@ img {
 .permanent-clients__list,
 .address__list,
 .filter-list,
-.projects-list
+.projects-list,
+.mob-menu__list,
+.mob-connection__list,
+.mob-soc__list
  {
     list-style: none;
 }
