--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -15,3 +15,16 @@
         @content;
     }
 }
+
+@mixin font($fw, $fs, $lh, $ls) {
+    font-weight: $fw;
+    font-size: $fs;
+    line-height: $lh;
+    letter-spacing: $ls;
+}
+
+@mixin flex {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
