--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -27,9 +27,12 @@ img {
 .address__list,
 .filter-list,
 .projects-list,
-.mob-menu__list,
-.mob-connection__list,
-.mob-soc__list
+// .mob-menu__list,
+// .mob-connection__list,
+// .mob-soc__list,
+.mobile-nav,
+.mobile-contacts,
+.mobile-sm
  {
     list-style: none;
 }
