--- a/css/main.css
+++ b/css/main.css
@@ -65,9 +65,9 @@ img {
 .address__list,
 .filter-list,
 .projects-list,
-.mob-menu__list,
-.mob-connection__list,
-.mob-soc__list {
+.mobile-nav,
+.mobile-contacts,
+.mobile-sm {
   list-style: none;
 }
 
@@ -1530,6 +1530,12 @@ link:visited {
   border-color: var(--accent-color);
 }
 
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
 .close-icon {
   position: absolute;
   top: 50%;
@@ -1784,17 +1790,10 @@ link:visited {
   width: 100vw;
   height: 100vh;
   padding: 48px 40px;
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.mobile-menu.is-open {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
 }
 
 .menu-button-close {
@@ -1882,10 +1881,4 @@ link:visited {
   letter-spacing: 0.02em;
   color: #2196f3;
   text-decoration: none;
-}
-
-.is-hidden {
-  -webkit-transform: translateY(-100%);
-          transform: translateY(-100%);
-  opacity: 0;
 }/*# sourceMappingURL=main.css.map */
