--- a/sass/layouts/_modal-menu.scss
+++ b/sass/layouts/_modal-menu.scss
@@ -22,13 +22,10 @@
     width: 100vw;
     height: 100vh;
     padding: 48px 40px;
-    transform: translateX(100%);
+
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mobile-menu.is-open {
-    transform: translateX(0);
-}
 
 .menu-button-close {
     display: block;
@@ -108,7 +105,7 @@
     text-decoration: none;
 }
 
-.is-hidden {
-    transform: translateY(-100%);
-    opacity: 0;
-}
+// .is-hidden {
+//     transform: translateY(-100%);
+//     opacity: 0;
+// }
