--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -35,11 +35,11 @@
     }
 }
 
-// .is-hidden {
-//     opacity: 0;
-//     visibility: hidden;
-//     pointer-events: none;
-// }
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
 
 .close-icon {
     position: absolute;
