--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -30,10 +30,25 @@
 
 .hero--position {
     max-width: 1600px;
-    min-height: 600px;
     margin: 0 auto;
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 118px;
+    padding-bottom: 118px;
+
+    @include mobile {
+        padding-top: 118px;
+        padding-bottom: 118px;
+    }
+    
+    @include tablet {
+        padding-top: 118px;
+        padding-bottom: 118px;
+    }
+    
+    @include desktop {
+        padding-top: 200px;
+        padding-bottom: 200px;
+        min-height: 600px;
+    }
 }
 
 .hero__title {
